# zero2prod

./: Cargo.toml  configuration.ron
migrations/: 20250909002110_create_subscriptions_table.sql
scripts/: init_db.fish  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
