[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Bartosz Zawada <zawada.bartosz@gmail.com>"]
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
] }
config = { version = "0.15", default-features = false, features = [
    "async",
    "ron",
] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
uuid = { version = "1.18.1", features = ["v4"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }


[dev-dependencies]
reqwest = "0.12.23"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
